--- a/Projet Python/1. Code/Code.ipynb
+++ b/Projet Python/1. Code/Code.ipynb
@@ -158,7 +158,7 @@
     }
    ],
    "source": [
-    "crime = pd.read_csv(\"C:/Users/Akhilesh/Desktop/Akhil/MIE/MASTER/Semestre 3/Python Exercises/Projet/crime.csv\", )\n",
+    "crime = pd.read_csv(\"/Projet Python/2. Data/crime.csv\", )\n",
     "crime.head()"
    ]
   },
@@ -259,7 +259,7 @@
    "outputs": [],
    "source": [
     "#from IPython.display import Image\n",
-    "#Image(\"C:/Users/Akhilesh/Desktop/Akhil/MIE/MASTER/Semestre 3/Python Exercises/Projet/Sacramento.png\")"
+    "#Image(\"Projet Python/2. Data/Sacramento.png\")"
    ]
   },
   {
